# empathetic-code-reviewer

./: .env.example  .gitignore  CONTRIBUTING.md  EVALUATION_CHECKLIST.md  LICENSE  PROMPT_ENGINEERING.md  README.md  config.example.yaml  pyproject.toml  report.md  requirements.txt
.github/workflows/: ci.yml
empathetic/: __init__.py  analytics.py  cli.py  config.py  diff_utils.py  evaluators.py  formatting.py  json_repair.py  llm_client.py  logging_config.py  models.py  pipeline.py  postprocessors.py  resources.py  rewriting.py  severity.py  style_guidelines.py
examples/: expected_output.md  sample_input.json
tests/: test_diff.py  test_formatting.py  test_json_repair.py  test_pipeline.py  test_rewriting.py  test_severity.py
